Fixed bug on Safari.

--- a/main.css
+++ b/main.css
@@ -221,6 +221,7 @@ div.container {
 /*poster*/
 div.container img {
     width: 100%;
+    height: 100%;
     display: flex;
     /*flex-grow: 2;*/
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
